<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".strorySActivity2">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/title"
            />
        <RelativeLayout
            android:id="@+id/RID"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/fId"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:contentDescription="@string/img"
                android:src="@drawable/mstrouble" />

            <TextView
                android:id="@+id/ftID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fId"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="dd"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic" />
        </RelativeLayout>
        <Button
            android:id="@+id/nextB"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</ScrollView>