<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stories"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <LinearLayout
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:background="#2CD9EF"
                >
                <LinearLayout
                    android:id="@+id/moral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:src="@drawable/believeinyourself"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moral_stories"
                        android:textSize="22sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:id="@+id/love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="560dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/life"
                        android:contentDescription="@string/img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/life_lessons"
                        android:textSize="22sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:id="@+id/sifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:src="@drawable/like"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si_fi"
                        android:textSize="22sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:id="@+id/adventure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:src="@drawable/like"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adventure"
                        android:textSize="22sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">
                <LinearLayout
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:src="@drawable/like"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/success"
                        android:textSize="22sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">
                <LinearLayout
                    android:id="@+id/horror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="#C4C8CA"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:padding="8dp"
                        android:src="@drawable/like"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horror"
                        android:textSize="22sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</ScrollView>